# F1-Telemetry-Visualizer

./: .gitignore  README.md  main.py  open_in_vscode.bat  pyproject.toml  requirements-analytics.txt  requirements-dashboard.txt  requirements.txt  run_dashboard.bat
.streamlit/: config.toml
config/: __init__.py  settings.py
dashboard/: __init__.py  app.py
dashboard/components/: sidebar.py  summary.py
data/processed/prebuilt/2024_italian_grand_prix_q/: corners.csv  laps.csv  manifest.json
data/processed/prebuilt/2024_italian_grand_prix_q/telemetry/: ALB.csv  ALO.csv  BOT.csv  COL.csv  GAS.csv  HAM.csv  HUL.csv  LEC.csv  MAG.csv  NOR.csv  OCO.csv  PER.csv  PIA.csv  RIC.csv  RUS.csv  SAI.csv  STR.csv  TSU.csv  VER.csv  ZHO.csv
docs/: phase_01_foundation.md  project_overview.md
telemetry/: __init__.py
telemetry/analytics/: __init__.py  insights.py  ml.py
telemetry/comparison/: __init__.py  service.py
telemetry/domain/: __init__.py  models.py
telemetry/ingestion/: __init__.py  base.py  calendar.py  demo_data.py  fastf1_session_loader.py  processed_store.py
telemetry/processing/: __init__.py  alignment.py  cleaning.py  extraction.py  schemas.py
telemetry/visualization/: __init__.py  plotly_factory.py
tests/: __init__.py  test_analytics.py  test_processed_store.py  test_processing.py  test_settings.py
utils/: time.py
