[project]
name = "f1-telemetry-visualizer"
version = "0.1.0"
description = "Professional-grade Formula 1 telemetry analysis platform in Python."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.8.1,<4.0",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "matplotlib>=3.8,<4.0",
    "plotly>=5.20,<7.0",
    "rich>=13.7,<15.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
analytics = [
    "scipy>=1.12,<2.0",
    "scikit-learn>=1.4,<2.0",
]
dashboard = [
    "streamlit>=1.35,<2.0",
    "dash>=2.16,<4.0",
]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
